# snake-party

./: .env.example  AGENTS.md  CI_CD_ARCHITECTURE.md  CI_CD_QUICK_REF.md  CI_CD_SETUP.md  CI_CD_SUMMARY.md  DEPLOY.md  Dockerfile  README.md  RENDER_DEPLOYMENT.md  TESTING.md  docker-compose.yml  nginx-unified.conf  openapi.yaml  package-lock.json  package.json  render.yaml  start.sh  tailwind.config.ts
.github/workflows/: ci-cd.yml
backend/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  reproduce_login.py  verify_backend.py
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/routers/: auth.py  leaderboard.py  spectator.py  stats.py
backend/migrations/: env.py
backend/migrations/versions/: 1982082f4b7f_initial_migration.py
backend/tests/: conftest.py  test_main.py
backend/tests_integration/: conftest.py  test_integration.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/auth/: AuthModal.tsx
frontend/src/components/game/: GameBoard.tsx  GameStats.tsx  MobileControls.tsx
frontend/src/components/layout/: Header.tsx
frontend/src/components/leaderboard/: Leaderboard.tsx
frontend/src/hooks/: useAuth.ts  useSnakeGame.ts
frontend/src/pages/: GamePage.tsx  LeaderboardPage.tsx  SpectatePage.tsx
frontend/src/services/: api.ts  schema.d.ts
src/components/game/: GameBoard.tsx  ModeSelector.tsx
src/game/: gameLogic.test.ts  gameLogic.ts  types.ts
src/hooks/: useAuth.ts
src/services/: api.ts
(+1 files in other folders)
